--- a/app/src/main/res/layout-normal/registarion_activity_new.xml
+++ b/app/src/main/res/layout-normal/registarion_activity_new.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/white"
@@ -249,4 +250,15 @@
         android:layout_marginTop="0dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
+
+    <realizer.com.schoolgenieparent.view.ProgressWheel
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        app:matProg_barColor="@color/colorAccent"
+        app:matProg_progressIndeterminate="true"
+        />
 </RelativeLayout>
