--- a/app/src/main/res/layout-normal/insert_div_layout.xml
+++ b/app/src/main/res/layout-normal/insert_div_layout.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
     <FrameLayout style="@style/SubFrameLayoutWeight1"
         android:background="@color/colorAccent"
