--- a/app/src/main/res/layout-normal/insert_std_layout.xml
+++ b/app/src/main/res/layout-normal/insert_std_layout.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_height="wrap_content">
 
     <FrameLayout style="@style/SubFrameLayoutWeight1"
