--- a/app/src/main/res/layout-normal/teacher_notification_list_layout.xml
+++ b/app/src/main/res/layout-normal/teacher_notification_list_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white"
+    android:id="@+id/outerLayer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
